--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "express": "4.17.3",
     "jsonwebtoken": "9.0.2",
     "multer": "^1.4.5-lts.1",
-    "mysql2": "3.9.7"
+    "mysql2": "3.9.7",
+    "ts-jest": "^29.1.2"
   }
 }
