--- a/.env
+++ b/.env
@@ -1,11 +1,10 @@
-PORT=4001
-BASE_URL=http://localhost:4001
+PORT=4050
+BASE_URL=http://localhost:4050
 #DATABASE
-BD_NAME="bd_reto_analista"
+BD_NAME="databaseutp"
 BD_USERNAME="root"
 BD_PASSWORD=""
 BD_HOST="localhost"
 BD_PORT=3306
-BD_DIALECT="mysql"
 
 SECRET_KEY_JWT="c7&5ux#8pa3ay-kUS2Ok"
